# jeston_optimization

./: .gitignore  calibrator.py  mobilenet_calibration.cache  sample.py  timer_thread.py
DAD/06_googlenet/: CMakeLists.txt  googlenet.cpp
DAD/06_googlenet/model/: mobilenet_int8.plan  model_cpp_int8.plan
DAD/06_googlenet/python/: export_model.py  torch_inference.py
DAD/cmake/: common.cmake
DAD/common/: BatchStream.h  EntropyCalibrator.h  ErrorRecorder.h  argsParser.h  buffers.h  common.h  dumpTFWts.py  getOptions.cpp  getOptions.h  half.h  logger.cpp  logger.h  logging.h  parserOnnxConfig.h  safeCommon.h  sampleConfig.h  sampleDevice.h  sampleEngines.cpp  sampleEngines.h  sampleInference.cpp  sampleInference.h  sampleOptions.cpp  sampleOptions.h  sampleReporting.cpp  sampleReporting.h  sampleUtils.h
DAD/common/windows/: getopt.h
DAD/include/: NvCaffeParser.h  NvInfer.h  NvInferConsistency.h  NvInferConsistencyImpl.h  NvInferImpl.h  NvInferLegacyDims.h  NvInferPlugin.h  NvInferPluginUtils.h  NvInferRuntime.h  NvInferRuntimeCommon.h  NvInferSafeRuntime.h  NvInferVersion.h  NvOnnxConfig.h  NvUffParser.h  NvUtils.h
DAD/object_oriented/: CMakeLists.txt  callback.cpp  main.cpp  tensorrt_detection.cpp  tensorrt_detection.h
DAD/sampleINT8/: CMakeLists.txt  calibrator.cpp  calibrator.h  sampleINT8.txt  sampleOnnxINT8.cpp  utils.h
DAD/sampleINT8/model/: mobilenetint8.cache  model_cpp_int8.plan
DAD/util/: npp_common.h  process.cpp  process.h
